--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ text-aling: center;
 padding: 18px 20px;
 }
 
-.baner h2 {
+.banner h2 {
 font-size:2.5rem;
 margin-button: 10px;
 }
@@ -78,4 +78,20 @@ margin-button: 20px;
 
 .btn {
 display inline-block;
-backgound
+background: #28a745;
+color: white;
+pading: 10px 20px;
+border-radius: 5px;
+text-descoration: nome;
+transition: background 0.3s;
+}
+
+.btn:hover {
+background: #218838;
+}
+
+/* Destaques */
+.destaques {
+padding: 40px 20px;
+text-aling: center;
+}
